Prove file delete in client app